se agrego middleware para administracion y documentacion a readme
