# docs/swagger.json
@@ -13,44 +13,7 @@
     "host": "localhost:8080",
     "basePath": "/api/",
     "paths": {
-        "/login": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Ingresa un usuario",
-                "operationId": "login-user",
-                "parameters": [
-                    {
-                        "description": "Datos del usuario",
-                        "name": "loginUserRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handlers.loginUserRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Respuesta del login",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.loginUserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Error en la solicitud",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    }
-                }
-            }
-        },
-        "/users": {
+        "/admin/users": {
             "get": {
                 "security": [
                     {
@@ -118,7 +81,7 @@
                 }
             }
         },
-        "/users/email/{email}": {
+        "/admin/users/email/{email}": {
             "get": {
                 "security": [
                     {
@@ -155,7 +118,7 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/admin/users/{id}": {
             "get": {
                 "security": [
                     {
@@ -169,7 +132,7 @@
                 "operationId": "get-user",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "ID del usuario",
                         "name": "id",
                         "in": "path",
@@ -207,7 +170,7 @@
                 "operationId": "update-user",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "ID del usuario",
                         "name": "id",
                         "in": "path",
@@ -251,7 +214,7 @@
                 "operationId": "delete-user",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "ID del usuario",
                         "name": "id",
                         "in": "path",
@@ -274,7 +237,7 @@
                 }
             }
         },
-        "/users/{id}/password": {
+        "/admin/users/{id}/password": {
             "put": {
                 "security": [
                     {
@@ -291,7 +254,7 @@
                 "operationId": "change-password",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "ID del usuario",
                         "name": "id",
                         "in": "path",
@@ -323,7 +286,7 @@
                 }
             }
         },
-        "/users/{id}/set-super-admin": {
+        "/admin/users/{id}/set-super-admin": {
             "post": {
                 "security": [
                     {
@@ -337,7 +300,7 @@
                 "operationId": "set-super-admin",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "ID del usuario",
                         "name": "id",
                         "in": "path",
@@ -360,7 +323,7 @@
                 }
             }
         },
-        "/users/{id}/unset-super-admin": {
+        "/admin/users/{id}/unset-super-admin": {
             "post": {
                 "security": [
                     {
@@ -374,7 +337,7 @@
                 "operationId": "unset-super-admin",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "ID del usuario",
                         "name": "id",
                         "in": "path",
@@ -390,6 +353,43 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Ingresa un usuario",
+                "operationId": "login-user",
+                "parameters": [
+                    {
+                        "description": "Datos del usuario",
+                        "name": "loginUserRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.loginUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Respuesta del login",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.loginUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Error en la solicitud",
                         "schema": {
                             "$ref": "#/definitions/gin.H"
                         }
